# hpc_ai_infra_llmops

./: CONTRIBUTING.md  Makefile  README.md  REPO_METADATA.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: allreduce_throughput.py  precision_pareto.py  zero_memory_sweep.py
configs/deepspeed/: zero1.json  zero2.json  zero3_offload.json
configs/training/: gpt_1b3.yaml  gpt_350m.yaml
docker/: Dockerfile  Dockerfile.multinode  entrypoint.sh
docs/theory/: 01_roofline_derivation.md  02_allreduce_complexity.md  03_pipeline_bubble.md  04_zero_memory_equations.md
examples/: train_gpt_capstone.py
notebooks/: 01_gpu_memory_hierarchy.ipynb  02_ddp_from_scratch.ipynb  03_tensor_pipeline_parallel.ipynb  04_deepspeed_zero.ipynb  05_cloud_orchestration.ipynb  06_capstone_pipeline.ipynb
scripts/: launch_cloud.sh  launch_ddp.sh  launch_deepspeed.sh
src/hpcllmforge/: __init__.py
src/hpcllmforge/memory/: __init__.py  hierarchy.py  precision.py  profiler.py
src/hpcllmforge/orchestration/: __init__.py  checkpoint_manager.py  cloud_launcher.py  docker_builder.py
src/hpcllmforge/parallelism/: __init__.py
src/hpcllmforge/parallelism/data/: __init__.py  ddp_engine.py  gradient_bucket.py  ring_allreduce.py
src/hpcllmforge/parallelism/pipeline/: __init__.py  bubble_analyzer.py  microbatch_queue.py  one_forward_one_backward.py
src/hpcllmforge/parallelism/tensor/: __init__.py  column_parallel.py  parallel_attention.py  row_parallel.py
src/hpcllmforge/profiling/: __init__.py  nvtx_ranges.py  roofline.py  throughput_meter.py
src/hpcllmforge/utils/: __init__.py  logging.py  seeding.py  topology.py
src/hpcllmforge/zero/: __init__.py  offload.py  stage1.py  stage2.py  stage3.py
tests/: conftest.py
tests/integration/: test_distributed.py
tests/unit/: test_bubble_analyzer.py  test_precision.py  test_throughput_meter.py
