[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-llm-forge"
version = "0.1.0"
description = "A from-scratch engineering codex for high-performance LLM training infrastructure."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Haydar Kılıç" }
]
keywords = [
    "llm",
    "distributed-training",
    "deepspeed",
    "zero",
    "tensor-parallelism",
    "pipeline-parallelism",
    "mlops",
    "cuda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "rich>=13.7",
    "pyyaml>=6.0",
    "wandb>=0.17",
]

[project.optional-dependencies]
deepspeed = [
    "deepspeed>=0.15.0",
]
cloud = [
    "boto3>=1.34",
    "runpod>=1.6",
    "paramiko>=3.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/HAYDARKILIC/hpc-llm-forge"
Repository = "https://github.com/HAYDARKILIC/hpc-llm-forge"
Issues = "https://github.com/HAYDARKILIC/hpc-llm-forge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=hpcllmforge --cov-report=term-missing"
